--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "moment": "^2.24.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-drag-resize": "^0.1.4",
     "react-materialize": "^3.4.1",
     "react-moment": "^0.9.6",
+    "react-moveable": "^0.15.0",
     "react-redux": "^7.1.3",
     "react-redux-firebase": "^3.0.5",
     "react-router-dom": "^5.1.2",
