--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "firebase": "^7.3.0",
     "materialize-css": "^1.0.0",
     "moment": "^2.24.0",
+    "moveable": "^0.12.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-drag-resize": "^0.1.4",
