--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^7.1.3",
     "react-redux-firebase": "^3.0.5",
     "react-resizable-rotatable-draggable": "^0.2.0",
+    "react-rnd": "^10.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
