--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-materialize": "^3.4.1",
     "react-moment": "^0.9.6",
     "react-moveable": "^0.15.0",
+    "react-native": "^0.61.5",
+    "react-rectangle": "^1.3.3",
     "react-redux": "^7.1.3",
     "react-redux-firebase": "^3.0.5",
     "react-resizable-rotatable-draggable": "^0.2.0",
