--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "moment": "^2.24.0",
     "moveable": "^0.12.0",
     "react": "^16.11.0",
+    "react-color": "^2.17.3",
     "react-dom": "^16.11.0",
     "react-drag-resize": "^0.1.4",
     "react-materialize": "^3.4.1",
